--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <h2>Sobre mim</h2>
         <p>Estou aprendendo Git e GitHub.</p>
     </main>
+    <footer>Raphaella Trevisol</footer>
 </body>
 </html>
